--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-<title>Andrew McCaffrey</title>
+<title>Ding Ma</title>
 
 <style>
 h1 {font-family:arial;color:#FFFFFF;font-size:200%;text-align:center;max-width:1280px;}
@@ -42,7 +42,7 @@ background-color:black;
 <body>
 
 <p>
-<h1>Andrew McCaffrey's Digital Engineering and Fabrication Works 2017</h1>
+<h1>Ding Ma's Digital Engineering and Fabrication website project 2018</h1>
 </p>
 
 <p>
