--- a/index.html
+++ b/index.html
@@ -51,59 +51,59 @@ background-color:black;
 
 
 <p>
-<a href="w1.html">Team Challenges and Website Design</a>
+<a href="w1.html">Week 1</a>
 </p>
 
 <p>
-<a href="w2.html">CAD, Fusion 360, and Design</a>
+<a href="w2.html">Week 2</a>
 </p>
 
 <p>
-<a href="w3.html">W=Garment and UV Printer</a>
+<a href="w3.html">Week 3</a>
 </p>
 
 <p>
-<a href="w4.html">Computer Controlled Cutting and Laser Cutting and Engraving</a>
+<a href="w4.html">Week 4</a>
 </p>
 
 <p>
-<a href="w5.html">Vinyl Cutting and Printing</a>
+<a href="w5.html">Week 5</a>
 </p>
 
 <p>
-<a href="w6.html">3D Printing and Scanning</a>
+<a href="w6.html"Week 6</a>
 </p>
 
 <p>
-<a href="w7.html">CNC Milling, Casting and Composites</a>
+<a href="w7.html">Week 7</a>
 </p>
 
 <p>
-<a href="w8.html">Casting Tin</a>
+<a href="w8.html">Week 8</a>
 </p>
 
 <p>
-<a href="w9.html">Soldering and Welding</a>
+<a href="w9.html">Week 9</a>
 </p>
 
 <p>
-<a href="w10.html">Skateboards</a>
+<a href="w10.html">Week 10</a>
 </p>
 
 <p>
-<a href="w11.html">Electronics</a>
+<a href="w11.html">Week 11</a>
 </p>
 	
 <p>
-<a href="w12.html">Arduino/ Rasberry Pi</a>
+<a href="w12.html">Week 12</a>
 </p>
 
 <p>
-<a href="w13.html">Robotics</a>
+<a href="w13.html">Week 13</a>
 </p>
 	
 <p>
-<a href="w14.html">Wearables and Electronics</a>
+<a href="w14.html"Week 14</a>
 </p>
 	
 <p>
