--- a/me.html
+++ b/me.html
@@ -18,7 +18,7 @@ a {font-family:arial;font-size:}100%;}
 
 <hr style="width:75%">
 </header>
-<p> My name is Ding. This is my digital engineering course website. </p> 
+<p> My name is Ding. This is my digital engineering course website. I am a junior at WRA. </p> 
 
 
 <p> </p>
