--- a/me.html
+++ b/me.html
@@ -19,6 +19,8 @@ a {font-family:arial;font-size:}100%;}
 <hr style="width:75%">
 </header>
 <p> My name is Ding. This is my digital engineering course website. I am a junior at WRA. </p> 
+  
+  <img src="IMG_1662.JPG">
 
 
 <p> </p>
