--- a/w2.html
+++ b/w2.html
@@ -23,9 +23,9 @@ a {font-family:verdana;font-size:}100%;}
 
 <hr style="width:50%">
 
-<h3> Project | Wax Stamp</h3>
+<h3> 360 Fusion CAD</h3>
 <p> 
-This week we learned all about CAD (computer aided design) and I worked on creating my own wax stamp using the Fusion360 program.  Once I designed my stamp I exported it into makerbot and put the file on a USB drive.  Then I printed it out on the 3D printer.
+This week we learn to use Fusion 360 and design some 3D models with it.
 <h3>Files</h3>
 <ul>
 <li><a href="stamp.stl">Stamp</a>
