--- a/w3.html
+++ b/w3.html
@@ -34,7 +34,7 @@ I design the T-shirt with GT-3 Printer; I design the smug cup with a sublimation
 </ul>
 
 </p>
-<a href="Ding Ma Sublimination.cdr"> Corel File </a>
+<a href="Ding Ma Sublimination.cdr"> </a>
 
 
 
