--- a/w2.html
+++ b/w2.html
@@ -28,7 +28,7 @@ a {font-family:verdana;font-size:}100%;}
 This week we learn to use Fusion 360 and design some 3D models with it.
 <h3>Files</h3>
 <ul>
-<li><a href="stamp.stl">Stamp</a>
+<li><a href="Ding Ma Sublimination.cdr"> </a>
 </li>
 </ul>
 
