--- a/w4.html
+++ b/w4.html
@@ -34,6 +34,7 @@ This week I made three things. First, I combine my head model to another charact
 </ul>
 
   <img src="0_opt (1).jpg">
+    <img src="unnamed_opt.png>
 
 
   
