--- a/w2.html
+++ b/w2.html
@@ -34,6 +34,14 @@ This week we learn to use Fusion 360 and design some 3D models with it.
 
 	</p>	
 	
+ <img src="2_opt.png">
+ <img src="2_opt (1).png">
+ <img src="2_opt (2).png">
+ <img src="2_opt (3).png">
+ <img src="2_opt (4).png">
+ <img src="2_opt (5).png">
+	
+	
 	
 	
 
