--- a/w2.html
+++ b/w2.html
@@ -26,7 +26,7 @@ a {font-family:verdana;font-size:}100%;}
 <h3> 360 Fusion CAD</h3>
 <p> 
 This week we learn to use Fusion 360 and design some 3D models with it.
-<h3>Files</h3>
+<h3>Images</h3>
 <ul>
 <li><a href="Ding Ma Sublimination.cdr"> </a>
 </li>
