--- a/w4.html
+++ b/w4.html
@@ -27,7 +27,7 @@ a {font-family:verdana;font-size:}100%;}
 <h3> Project | Head on Model, additive project and pencil case </h3>
 <p> 
 This week I made three things. First, I combine my head model to another character's body. Then, I used 360 fusion autodesk to creat an additive shape. Finally, I made a pencil case with my classmate using 360 fusion.
-<h3></h3>
+<h3>Images</h3>
 <ul>
 <li>
 </li>
