--- a/w3.html
+++ b/w3.html
@@ -35,6 +35,16 @@ I design the T-shirt with GT-3 Printer; I design the smug cup with a sublimation
 
 </p>
 <a href="Ding Ma Sublimination.cdr"> </a>
+  
+  <img src="3_opt.png">
+   
+  <img src="3.1_opt.png">
+  
+  <img src="3.2.2.jpg">
+  
+  <img src="3.2.png">
+  
+  
 
 
 
