--- a/w3.html
+++ b/w3.html
@@ -44,6 +44,8 @@ I design the T-shirt with GT-3 Printer; I design the smug cup with a sublimation
   
   <img src="3.2.png">
   
+ <img src="3.1_opt.jpg">
+  
   
 
 
