--- a/w3.html
+++ b/w3.html
@@ -27,7 +27,7 @@ a {font-family:verdana;font-size:}100%;}
 <p> 
 This week I design three things: a smug cup, a T-shirt and a popsocket.
 I design the T-shirt with GT-3 Printer; I design the smug cup with a sublimation tools, which include a paper with ink on it and a printer;then, I design a popsocket by the UV printer.
-<h3>Files</h3>
+<h3>Images</h3>
 <ul>
 <li>
 </li>
