--- a/w2.html
+++ b/w2.html
@@ -40,6 +40,7 @@ This week we learn to use Fusion 360 and design some 3D models with it.
  <img src="2_opt (3).png">
  <img src="2_opt (4).png">
  <img src="2_opt (5).png">
+<img src="2_opt (6).png">
 	
 	
 	
