--- a/w4.html
+++ b/w4.html
@@ -37,6 +37,7 @@ This week I made three things. First, I combine my head model to another charact
    
   <img src="unnamed_opt.png">
 
+  <img src="4_opt.png">
 
   
 
