--- a/me.html
+++ b/me.html
@@ -18,7 +18,8 @@ a {font-family:arial;font-size:}100%;}
 
 <hr style="width:75%">
 </header>
-<p> My name is Ding. This is my digital engineering course website. I am a junior at WRA. </p> 
+<p> My name is Ding. This is my digital engineering course website. I am a junior at WRA.</p> 
+  <p>Interest in Digital Fabrication: I am interested in making useful things with computers. I find it more interesting than coding. </p>
   
   <img src="IMG_1662.JPG">
 
