--- a/w4.html
+++ b/w4.html
@@ -18,8 +18,8 @@ a {font-family:verdana;font-size:}100%;}
 </style>
 
 <body>
-<h1> Week 3</h1>
-<h2>Garmint Printer and UV Printer </h2>
+<h1> Week 4</h1>
+<h2>Laser Cutting</h2>
 
 <hr style="width:50%">
 
