--- a/w3.html
+++ b/w3.html
@@ -1,1 +1,38 @@
 
+
+
+<html>
+
+<head>
+<title> Week 3 </title>
+
+<style>
+h1 {font-family:brittanicbold;font-size:200%;text-align:center;}
+h2 {font-family:brittanicbold;font-size:150%;text-align:center;}
+h3 {font-family:verdana;font-size:125%;}
+p {font-family:verdana;font-size:100%;}
+li {font-family:verdana;font-size:100%}
+a {font-family:verdana;font-size:}100%;}
+
+
+
+</style>
+
+<body>
+<h1> Week 3</h1>
+<h2>Garment, UV printing and Sublimation</h2>
+
+<hr style="width:50%">
+
+<h3> Project | Garmint Printer and UV Printer </h3>
+<p> 
+This week I design three things: a smug cup, a T-shirt and a popsocket.
+I design the T-shirt with GT-3 Printer; I design the smug cup with a sublimation tools, which include a paper with ink on it and a printer;then, I design a popsocket by the UV printer.
+<h3>Images</h3>
+<ul>
+<li>
+</li>
+</ul>
+
+</p>
+<a href="Ding Ma Sublimination.cdr"> </a>
