--- a/w4.html
+++ b/w4.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-<title> Week 3 </title>
+<title> Week 4 </title>
 
 <style>
 h1 {font-family:brittanicbold;font-size:200%;text-align:center;}
@@ -23,10 +23,10 @@ a {font-family:verdana;font-size:}100%;}
 
 <hr style="width:50%">
 
-<h3> Project | Garmint Printer and UV Printer </h3>
+<h3> Laser Cutting </h3>
 <p> 
-This week I design three things: a smug cup, a T-shirt and a popsocket.
-I design the T-shirt with GT-3 Printer; I design the smug cup with a sublimation tools, which include a paper with ink on it and a printer;then, I design a popsocket by the UV printer.
+This week I design a clock on 360 fusion, and then I move the file to coraldraw and cut it with laser. The second thing I designed this week is some number blocks made of wood, which 
+  I design it on fusino 360 as well, they can be attached together. 
 <h3>Images</h3>
 <ul>
 <li>
