--- a/w1.html
+++ b/w1.html
@@ -30,6 +30,8 @@ We had 12 straws to make a golf ball catcher. Then we used three pages of newspa
 	<img src="IMG_1657_opt.jpg">
 	
 	<img src="IMG_1671_opt.jpg">
+	
+	<img src="teamwork.jpg">
     
 	
   
