--- a/me.html
+++ b/me.html
@@ -19,7 +19,7 @@ a {font-family:arial;font-size:}100%;}
 <hr style="width:75%">
 </header>
 <p> My name is Ding. This is my digital engineering course website. I am a junior at WRA.</p> 
-  <p>Interest in Digital Fabrication: I am interested in making useful things with computers. I find it more interesting than coding. </p>
+  <p>Interest in Digital Fabrication: I am interested in making useful things with computers. Before I take the class, I thought there is going to be a lot of coing, but I find this class to be more interesting because we actually make things. </p>
   
   <img src="IMG_1662.JPG">
 
