--- a/w2.html
+++ b/w2.html
@@ -25,7 +25,8 @@ a {font-family:verdana;font-size:}100%;}
 
 <h3> 360 Fusion CAD</h3>
 <p> 
-This week we learn to use Fusion 360 and design some 3D models with it.
+This week we learn to use Fusion 360 and design some 3D models with it. I think this week is quite easy for me. The most difficult part of the designs is the plan a way of making it so that
+I can find the most convenient way of making it. Overall, I was quite successful of design these shapes. 
 <h3>Images</h3>
 <ul>
 <li><a href="Ding Ma Sublimination.cdr"> </a>
