--- a/w3.html
+++ b/w3.html
@@ -28,11 +28,17 @@ a {font-family:verdana;font-size:}100%;}
 <p> 
 This week I design three things: a smug cup, a T-shirt and a popsocket.
 I design the T-shirt with GT-3 Printer; I design the smug cup with a sublimation tools, which include a paper with ink on it and a printer;then, I design a popsocket by the UV printer.
+Why is Sublimation better than UV printing: 1. I can only upload a small size file on the UV printer instead of a clear picture, which I can upload on a sublimation printer.
+2. The color of the product of UV printer is different from the original file(not so obvious with sublimation)
 <h3>Images</h3>
 <ul>
 <li>
 </li>
 </ul>
+  
+  <img src="smug.jpg">
+  <img src="tshirt.jpg">
+  <img src="popsocket.jpg">
 
 </p>
 <a href="Ding Ma Sublimination.cdr"> </a>
