--- a/w3.html
+++ b/w3.html
@@ -30,6 +30,7 @@ This week I design three things: a smug cup, a T-shirt and a popsocket.
 I design the T-shirt with GT-3 Printer; I design the smug cup with a sublimation tools, which include a paper with ink on it and a printer;then, I design a popsocket by the UV printer.
 Why is Sublimation better than UV printing: 1. I can only upload a small size file on the UV printer instead of a clear picture, which I can upload on a sublimation printer.
 2. The color of the product of UV printer is different from the original file(not so obvious with sublimation)
+  Making a smug with sublimation is the hardest part of this week.(Moving it from the compressing machine into a bucket of water)
 <h3>Images</h3>
 <ul>
 <li>
