--- a/w5.html
+++ b/w5.html
@@ -4,7 +4,7 @@
 <html>
 
 <head>
-<title> Week 4 </title>
+<title> Week 5 </title>
 
 <style>
 h1 {font-family:brittanicbold;font-size:200%;text-align:center;}
@@ -27,6 +27,7 @@ a {font-family:verdana;font-size:}100%;}
 <h3> Project | Head on Model, additive project and pencil case </h3>
 <p> 
 This week I made three things. First, I combine my head model to another character's body. Then, I used 360 fusion autodesk to creat an additive shape. Finally, I made a pencil case with my classmate using 360 fusion.
+The most difficult part of this week was to combine my head model to another character's body. 3D printing is very convenient when I am trying to make one model; however, it took me 5 hours to finish my model. As a result, 3d printing is not practical for mass production. 
 <h3>Images</h3>
 <ul>
 <li>
