--- a/w9.html
+++ b/w9.html
@@ -1,1 +1,41 @@
 
+<html>
+
+<head>
+<title> Week 9</title>
+
+<style>
+h1 {font-family:brittanicbold;font-size:200%;text-align:center;}
+h2 {font-family:brittanicbold;font-size:150%;text-align:center;}
+h3 {font-family:verdana;font-size:125%;}
+p {font-family:verdana;font-size:100%;}
+li {font-family:verdana;font-size:100%}
+a {font-family:verdana;font-size:}100%;}
+</style>
+
+<body>
+<h1> Week 9</h1>
+<h2>Arduino</h2>
+
+<hr style="width:50%">
+
+<h3> Arduino</h3>
+<p> 
+This week I used Sparkfun Electronics box to creat many fun things. During the process I find it hard to debug because the way I make things. I make each one of the fifteen pieces exactly 
+  the same as the one on the pictures, so if I made something wrong I need to go over everything again, since I do not know exactly the functions for each part. The coding part is the second hardest part. 
+  
+	
+	<img src="part1.jpg">
+	
+	<img src="part2.jpg">
+	
+	<img src="part3.jpg">
+  
+  <img src="part4.jpg">
+  
+  <img src="part5.jpg">
+    
+	
+  
+
+	</p> 
