--- a/w9.html
+++ b/w9.html
@@ -25,15 +25,15 @@ This week I used Sparkfun Electronics box to creat many fun things. During the p
   the same as the one on the pictures, so if I made something wrong I need to go over everything again, since I do not know exactly the functions for each part. The coding part is the second hardest part. 
   
 	
-	<img src="part1.jpg">
+	<img src="part1.JPG">
 	
-	<img src="part2.jpg">
+	<img src="part2.JPG">
 	
-	<img src="part3.jpg">
+	<img src="part3.JPG">
   
-  <img src="part4.jpg">
+  <img src="part4.JPG">
   
-  <img src="part5.jpg">
+  <img src="part5.JPG">
     
 	
   
