--- a/w7.html
+++ b/w7.html
@@ -1,1 +1,37 @@
 
+<html>
+
+<head>
+<title> Week 7</title>
+
+<style>
+h1 {font-family:brittanicbold;font-size:200%;text-align:center;}
+h2 {font-family:brittanicbold;font-size:150%;text-align:center;}
+h3 {font-family:verdana;font-size:125%;}
+p {font-family:verdana;font-size:100%;}
+li {font-family:verdana;font-size:100%}
+a {font-family:verdana;font-size:}100%;}
+</style>
+
+<body>
+<h1> Week 8</h1>
+<h2>Soldering | Electronics</h2>
+
+<hr style="width:50%">
+
+<h3> </h3>
+<p> 
+This week I made a pillow case and a hat with some words on it. The hat was very easy to make; however, I feel that I need a lot of practice with the sewing machine to make a perfect pillow case and etc.
+  It is hard to sew in a straight line. 
+  
+	
+	<img src="hat.jpg">
+	
+	<img src="case.jpg">
+	
+	
+    
+	
+  
+
+	</p> 
