--- a/w7.html
+++ b/w7.html
@@ -14,20 +14,66 @@ a {font-family:verdana;font-size:}100%;}
 </style>
 
 <body>
-<h1> Week 8</h1>
+<h1> Week 7</h1>
 <h2>Soldering | Electronics</h2>
 
 <hr style="width:50%">
 
 <h3> </h3>
 <p> 
-This week I made a pillow case and a hat with some words on it. The hat was very easy to make; however, I feel that I need a lot of practice with the sewing machine to make a perfect pillow case and etc.
-  It is hard to sew in a straight line. 
+This week we practice with electronics parts and learn the functions of these part. For example, we learn LED, resistor and etc. Then I made a clock.
+	I connect the part with a kind of metal that can be melted under certain temperature. 
+	Ass 3: Capacitor: Stores electrical energy 
+	Transistor: semiconductor device, capable of amplifying or switching electronic signals and electrical power 
+	LED: Light Emitting Diode 
+	Diode: two-terminal electronic component that conduct current in primarily one direction 
+	Potentiometer: adjusts voltage 
+	Breadboard: solderless board
+	Multimeter: combines several measurements functions
+	Switch: turns parts on and off
+	
+	Ass 4:
+	Resistance = Voltage/Current. Resistance is the measure of opposition to a flow of electric current. 
+	Voltage is the potential difference between two terminals. Current is the flow of electric charge.
+	AC: change the amplitude of current periodically
+	DC: Amplitude of current Stays constant
   
 	
-	<img src="hat.jpg">
+	<img src="1.1.jfif">
 	
-	<img src="case.jpg">
+	<img src="1.2.jfif">
+	
+	<img src="1.1.jfif">
+	
+	<img src="1.3.jfif">
+	
+	<img src="1.4.jfif">
+	
+	<img src="1.5.jfif">
+	
+	<img src="1.6.jfif">
+	
+	<img src="1.7.jfif">
+	
+	<img src="1.8.jfif">
+	
+	<img src="1.9.jfif">
+	
+	<img src="2.0.jfif">
+	
+	<img src="2.1.jfif">
+	
+	<img src="2.2.jfif">
+	
+	<img src="2.3.jfif">
+	
+	<img src="2.4.jfif">
+	
+	<img src="2.5.jfif">
+	
+	<img src="2.6.jfif">
+	
+	<img src="2.7.jfif">
 	
 	
     
