--- a/w7.html
+++ b/w7.html
@@ -37,6 +37,8 @@ This week we practice with electronics parts and learn the functions of these pa
 	Voltage is the potential difference between two terminals. Current is the flow of electric charge.
 	AC: change the amplitude of current periodically
 	DC: Amplitude of current Stays constant
+	
+	The eclock was not hard to make. I just follow the instruction and made it. 
   
 	
 	<img src="1.1.jfif">
@@ -74,6 +76,8 @@ This week we practice with electronics parts and learn the functions of these pa
 	<img src="2.6.jfif">
 	
 	<img src="2.7.jfif">
+	
+	<img src="eclock(1).jpg">
 	
 	
     
