--- a/w7.html
+++ b/w7.html
@@ -41,43 +41,36 @@ This week we practice with electronics parts and learn the functions of these pa
 	The eclock was not hard to make. I just follow the instruction and made it. 
   
 	
-	<img src="1.1.jfif">
+	<img src="1_opt.jpg">
 	
-	<img src="1.2.jfif">
+	<img src="1_opt(1).jpg">
 	
-	<img src="1.1.jfif">
+	<img src="1_opt(2).jpg">
 	
-	<img src="1.3.jfif">
+	<img src="1_opt(3).jpg">
 	
-	<img src="1.4.jfif">
+	<img src="1_opt(4).jpg">
 	
-	<img src="1.5.jfif">
+	<img src="1_opt(5).jpg">
 	
-	<img src="1.6.jfif">
+	<img src="1_opt(6).jpg">
 	
-	<img src="1.7.jfif">
+	<img src="1_opt(7).jpg">
 	
-	<img src="1.8.jfif">
+	<img src="1_opt(8).jpg">
 	
-	<img src="1.9.jfif">
+	<img src="1_opt(9).jpg">
+
+	<img src="1_opt(10).jpg">
 	
-	<img src="2.0.jfif">
+	<img src="1_opt(11).jpg">
 	
-	<img src="2.1.jfif">
+	<img src="1_opt(12).jpg">
 	
-	<img src="2.2.jfif">
+	<img src="1_opt(13).jpg">
 	
-	<img src="2.3.jfif">
+	<img src="1_opt(14).jpg">
 	
-	<img src="2.4.jfif">
-	
-	<img src="2.5.jfif">
-	
-	<img src="2.6.jfif">
-	
-	<img src="2.7.jfif">
-	
-	<img src="eclock(1).jpg">
 	
 	
     
