--- a/w7.html
+++ b/w7.html
@@ -40,37 +40,8 @@ This week we practice with electronics parts and learn the functions of these pa
 	
 	The eclock was not hard to make. I just follow the instruction and made it. 
   
-	
-	<img src="1_opt.jpg">
-	
-	<img src="1_opt(1).jpg">
-	
-	<img src="1_opt(2).jpg">
-	
-	<img src="1_opt(3).jpg">
-	
-	<img src="1_opt(4).jpg">
-	
-	<img src="1_opt(5).jpg">
-	
-	<img src="1_opt(6).jpg">
-	
-	<img src="1_opt(7).jpg">
-	
-	<img src="1_opt(8).jpg">
-	
-	<img src="1_opt(9).jpg">
-
-	<img src="1_opt(10).jpg">
-	
-	<img src="1_opt(11).jpg">
-	
-	<img src="1_opt(12).jpg">
-	
-	<img src="1_opt(13).jpg">
-	
-	<img src="1_opt(14).jpg">
-	
+	Link to my pictures
+	https://drive.google.com/drive/folders/1Zq1PsqLn1bjoLHFRpoQjttddZM1bg7OO 
 	
 	
     
