--- a/w6.html
+++ b/w6.html
@@ -43,7 +43,8 @@ a {font-family:verdana;font-size:}100%;}
 This week I made a longboard. I the board with green paint and a WRA logo on it. I built the board with layers of wood, which has specific sequence, in order to keep the board flexible while have it strong enough to hold a person on it. Then I press it with clamp for 24 hours.
 I design a mold in stl format on the computer, then I carve it into a wax with a carving machine. In order to make a chocolate, I pour edible level silicon into the wax and then waited for 24 hours. Finally, I poured melted chocolate into the mold and then cool it down in a fridge.
 This week is the best week so far. The hardest part of this week was to creat a mold from positive to negative. In order to have a proper shape for a chocolate, I need to think about it when I am making the stl file. 
-
+ The final product, chocolate, was made from a negative model.
+ 
  <img src="board.JPG">
  <img src="eclock(3).JPG">
  
