--- a/w15.html
+++ b/w15.html
@@ -24,6 +24,8 @@ a {font-family:verdana;font-size:}100%;}
 <p> 
 This week I creat a box. I used 360 fusion to design a base for my box, then I use 3d printer to print the base of the box, then I laser cut the box,
 finally, I UV print the box. 
+	
+	<img src="finalprojectding.jpg">
   
     
 	
